adicionando recaptcha e configurando

--- a/app/assets/stylesheets/frontend/pages/home.sass
+++ b/app/assets/stylesheets/frontend/pages/home.sass
@@ -459,6 +459,7 @@
         color: $letterColor
         font-size: 18pt
         margin: 0
+        text-align: center
     p
         margin: 0
         color: $letterColor
