--- a/app/views/frontend/public/search_numbers.html.slim
+++ b/app/views/frontend/public/search_numbers.html.slim
@@ -14,7 +14,7 @@
                 |  #{@member.name}
             li
                 strong CPF:
-                |  #{@member.cpf[0..2] + '.***.***-**'}
+                |  #{@member.cpf[0..2] + '.***.***-' + @member.cpf[12..13]}
             li
                 strong Telefone:
                 |  #{@member.phone[0..3] + '*****-' + @member.phone[10..13]}
