--- a/app/views/frontend/registrations/new_member_payment.html.slim
+++ b/app/views/frontend/registrations/new_member_payment.html.slim
@@ -9,29 +9,37 @@
     
       .input-container
         .input-box
-          .text-i = icon('fas', 'envelope')
-          = f.input_field :email, placeholder: 'Digite seu E-mail', required: true, autofocus: true, class: 'login-input'
-          span id="emailMessage"
-          - if @member.errors.has_key?(:email)
-            p.text-danger = @member.errors[:email].first
+          div
+            .text-i 
+              = icon('fas', 'envelope')
+              = f.input_field :email, placeholder: 'Digite seu E-mail', required: true, autofocus: true, class: 'login-input'
+            span id="emailMessage"
+            - if @member.errors.has_key?(:email)
+              p.text-danger = @member.errors[:email].first
 
         .input-box
-          .text-i = icon('fas', 'id-card')
-          = f.input_field :name, placeholder: 'Digite seu Nome', required: true, class: 'login-input'
-          - if @member.errors.has_key?(:name)
-            p.text-danger = @member.errors[:name].first
+          div
+            .text-i 
+              = icon('fas', 'id-card')
+              = f.input_field :name, placeholder: 'Digite seu Nome', required: true, class: 'login-input'
+            - if @member.errors.has_key?(:name)
+              p.text-danger = @member.errors[:name].first
 
         .input-box
-          .text-i = icon('fas', 'mobile')
-          = f.input_field :phone, label: 'Telefone', placeholder: 'Digite seu Telefone', required: true, input_html: { id: 'phone_field' }, class: 'login-input', value: @phone
-          - if @member.errors.has_key?(:phone)
-            p.text-danger = @member.errors[:phone].first
+          div
+            .text-i 
+              = icon('fas', 'mobile')
+              = f.input_field :phone, label: 'Telefone', placeholder: 'Digite seu Telefone', required: true, input_html: { id: 'phone_field' }, class: 'login-input', value: @phone
+            - if @member.errors.has_key?(:phone)
+              p.text-danger = @member.errors[:phone].first
 
         .input-box
-          .text-i = icon('fas', 'id-card')
-          = f.input_field :cpf, label: 'CPF', placeholder: 'Digite seu CPF', required: true, class: 'login-input'
-          - if @member.errors.has_key?(:cpf)
-            p.text-danger = @member.errors[:cpf].first
+          div
+            .text-i 
+              = icon('fas', 'id-card')
+              = f.input_field :cpf, label: 'CPF', placeholder: 'Digite seu CPF', required: true, class: 'login-input'
+            - if @member.errors.has_key?(:cpf)
+              p.text-danger = @member.errors[:cpf].first
 
         .button-container
           .recaptcha = recaptcha_tags
