--- a/app/views/frontend/registrations/new.html.slim
+++ b/app/views/frontend/registrations/new.html.slim
@@ -27,17 +27,18 @@
         .input-box
           div
             .text-i = icon('fas', 'mobile')
-            = f.input_field :phone, label: 'Telefone', placeholder: 'Digite seu Telefone', required: true, input_html: { id: 'phone_field' }, class: 'login-input'
+            = f.input_field :phone, label: 'Telefone', placeholder: 'Digite seu Telefone', autofocus: true, required: true, input_html: { id: 'phone_field' }, class: 'login-input'
           - if @member.errors.has_key?(:phone)
             span.text-danger = @member.errors[:phone].first
+          span#phoneMessage
 
         .input-box
           div
             .text-i = icon('fas', 'id-card')
-            = f.input_field :cpf, label: 'CPF', placeholder: 'Digite seu CPF', required: true, class: 'login-input'
-            span id="cpfMessage"
+            = f.input_field :cpf, label: 'CPF', placeholder: 'Digite seu CPF', required: true, autofocus: true, class: 'login-input'
           - if @member.errors.has_key?(:cpf)
             span.text-danger = @member.errors[:cpf].first
+          span id="cpfMessage"
 
 
         .button-container
