--- a/app/views/frontend/registrations/new_member_payment.html.slim
+++ b/app/views/frontend/registrations/new_member_payment.html.slim
@@ -26,9 +26,10 @@
         .input-box
           div
             .text-i = icon('fas', 'mobile')
-            = f.input_field :phone, label: 'Telefone', placeholder: 'Digite seu Telefone', required: true, input_html: { id: 'phone_field' }, class: 'login-input', value: @phone
+            = f.input_field :phone, label: 'Telefone', placeholder: 'Digite seu Telefone', autofocus: true, required: true, input_html: { id: 'phone_field' }, class: 'login-input', value: @phone
           - if @member.errors.has_key?(:phone)
             p.text-danger = @member.errors[:phone].first
+          span id="phoneMessage"
 
         .input-box
           div
@@ -36,6 +37,7 @@
             = f.input_field :cpf, label: 'CPF', placeholder: 'Digite seu CPF', required: true, class: 'login-input'
           - if @member.errors.has_key?(:cpf)
             p.text-danger = @member.errors[:cpf].first
+          span id="cpfMessage"
 
         .button-container
           .recaptcha = recaptcha_tags
