--- a/app/views/frontend/registrations/new_member_payment.html.slim
+++ b/app/views/frontend/registrations/new_member_payment.html.slim
@@ -41,5 +41,5 @@
 
         .button-container
           .recaptcha = recaptcha_tags
-          = f.button :submit, "Enviar", class: 'button-register'
+          = f.button :submit, "Enviar", class: 'button-register', id: 'button-submit'
           = link_to "Voltar", "/", class: 'button-register'
