--- a/app/views/frontend/public/error.html.slim
+++ b/app/views/frontend/public/error.html.slim
@@ -9,8 +9,10 @@
                     p O servidor de pagamento está indisponível no momento por favor tente novamente mais tarde.
                     .meme 
                         p ERRO INTERNO STATUS: 500
-                    .contact-link
-                        p Para mais informações: 
-                        = link_to `https://wa.me/#{@whatsapp.url}`, target: '_blank' do    
-                            = icon('fab', 'whatsapp') 
-                            = 'Clique aqui'
+
+                    - if @whatsapp.present?
+                        .contact-link
+                            p Para mais informações: 
+                            = link_to `https://wa.me/#{@whatsapp.url}`, target: '_blank' do    
+                                = icon('fab', 'whatsapp') 
+                                = 'Clique aqui'
