--- a/app/views/frontend/registrations/new.html.slim
+++ b/app/views/frontend/registrations/new.html.slim
@@ -43,5 +43,5 @@
 
         .button-container
           .recaptcha = recaptcha_tags
-          = f.button :submit, "Enviar", class: 'button-register'
+          = f.button :submit, "Enviar", class: 'button-register', id: 'button-submit', disabled: true
           = link_to "Voltar", "/", class: 'button-register'
