fix erro de pagamento

--- a/app/views/frontend/public/error.html.slim
+++ b/app/views/frontend/public/error.html.slim
@@ -13,6 +13,6 @@
                     - if @whatsapp.present?
                         .contact-link
                             p Para mais informações: 
-                            = link_to `https://wa.me/#{@whatsapp.url}`, target: '_blank' do    
+                            = link_to "https://wa.me/#{@whatsapp.url}", target: '_blank' do    
                                 = icon('fab', 'whatsapp') 
                                 = 'Clique aqui'
