altura do box todas as campanhas

--- a/app/assets/stylesheets/frontend/pages/home.sass
+++ b/app/assets/stylesheets/frontend/pages/home.sass
@@ -197,7 +197,7 @@
     border-radius: 10px 0px 0px 10px
     width: 150px
     object-fit: cover
-    height: 160px
+    height: 100%
 
 .dropdown-menu
     min-width: 0
