alterações de emergencia

--- a/app/views/frontend/public/search_numbers.html.slim
+++ b/app/views/frontend/public/search_numbers.html.slim
@@ -47,3 +47,11 @@
   .not-numbers
     p Não há números de loteria cadastrados para este membro.
     = link_to 'Comprar Bilhetes', '/campanhas'
+.not-numbers
+  p = icon('fas', 'exclamation-circle')
+  p Caso tenha adiquirido números e conste aqui, por favor entre em contato.
+  - if @whatsapp.present?
+  .contact-link
+      = link_to "https://wa.me/#{@whatsapp.url}", target: '_blank' do    
+          = icon('fab', 'whatsapp') 
+          = 'Clique aqui' 
