--- a/app/assets/stylesheets/frontend/application.sass
+++ b/app/assets/stylesheets/frontend/application.sass
@@ -64,8 +64,9 @@ body
     padding: 10px
     border-radius: 10px
     display: flex
-    margin-top: 20px
+    margin: 0 20px
     gap: 20px
+    align-items: center
 
 .sorteio-content-winner
     width: 100%
@@ -224,8 +225,11 @@ body
     justify-content: center
     align-items: center
     flex-direction: column
+    align-items: center
+    margin: 20px 0
     p
         text-align: center
+        margin: 0
     a
         background-color: #17a700
         padding: 5px 10px
@@ -315,6 +319,7 @@ body
     align-items: center
     gap: 10px
     margin-top: 30px
+    margin-bottom: 30px
     a
         background-color: #17a700
         padding: 10px 20px
