css do meus titulos icone de warnig

--- a/app/views/layouts/frontend.html.slim
+++ b/app/views/layouts/frontend.html.slim
@@ -87,7 +87,8 @@ html lang="pt-BR"
                             
                             .sorteio-actions
                                 .alert-warning role="alert"
-                                    p = icon('fas', 'exclamation-circle') + ' Informe seu número de telefone para continuar'
+                                    p = icon('fas', 'exclamation-circle') 
+                                    p = ' Informe seu número de telefone para continuar'
                                 = form.label :phone, "Número de Telefone: "
                                 = form.text_field :phone, id: 'phone-field-number', class: 'new-sorteio-input-number'
                                 = form.button "Confirmar", class: 'new-sorteio-submit' 
