alterações para resolver problema de atualização da pagina de pagamento

--- a/app/assets/stylesheets/frontend/pages/home.sass
+++ b/app/assets/stylesheets/frontend/pages/home.sass
@@ -286,6 +286,7 @@
     width: 100%
     margin: 0 0 30px 0px
     display: flex
+    margin-top: 10px
     h2
         color: $letterColor
         font-size: 12pt
