--- a/app/assets/stylesheets/frontend/application.sass
+++ b/app/assets/stylesheets/frontend/application.sass
@@ -220,6 +220,14 @@ body
     span
         color: $letterColor
 
+.my-titles-img
+    width: 100px
+    border-radius: 10px 0px 0px 10px
+    box-shadow: inset 0 0 5px #454545
+    object-fit: cover
+    height: 100%
+
+
 .not-numbers
     display: flex
     justify-content: center
@@ -227,9 +235,12 @@ body
     flex-direction: column
     align-items: center
     margin: 20px 0
+    gap: 1.5rem
     p
         text-align: center
         margin: 0
+        max-width: 400px
+
     a
         background-color: #17a700
         padding: 5px 10px
