--- a/app/assets/stylesheets/admin/home.sass
+++ b/app/assets/stylesheets/admin/home.sass
@@ -14,6 +14,12 @@
     padding-top: 60px
     z-index: 2
 
+.my-titles-img
+    width: 100px
+    border-radius: 10px 0px 0px 10px
+    box-shadow: inset 0 0 5px #454545
+    object-fit: cover
+    height: 100%
 
 /* Conteúdo do modal */
 .modal-content 
@@ -231,6 +237,7 @@
     width: 100%
     margin: 0 0 30px 0px
     display: flex
+    margin-top: 10px
     .sorteio-content
         width: 100%
         padding: 10px
