test: testando git actions

--- a/app/views/frontend/public/events.html.slim
+++ b/app/views/frontend/public/events.html.slim
@@ -5,9 +5,10 @@ section#events
                 .purchase
                     .sorteio-container
                         .home-title 
+                            
                             div
                                 = icon('fas', 'money-bill-alt')
-                                h1 Campanhas
+                                h1 Teste
                             p Escolha sua campanha
                             .icon-box
                                 = icon('fas', 'fire')
