feat: adicionando variavel de ambiente no token

--- a/app/views/frontend/public/events.html.slim
+++ b/app/views/frontend/public/events.html.slim
@@ -4,11 +4,10 @@ section#events
             .row
                 .purchase
                     .sorteio-container
-                        .home-title 
-                            
+                        .home-title    
                             div
                                 = icon('fas', 'money-bill-alt')
-                                h1 Teste
+                                h1 Campanhas
                             p Escolha sua campanha
                             .icon-box
                                 = icon('fas', 'fire')
